<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.InformationCardFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_info_card"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="12dp"
        android:backgroundTint="@color/back_card_view_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title_card_number"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_title_bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title_bank"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_first_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                app:layout_constraintBottom_toBottomOf="@+id/tv_second_digits"
                app:layout_constraintEnd_toStartOf="@+id/tv_second_digits"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_second_digits"
                tools:text="4562" />

            <TextView
                android:id="@+id/tv_second_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                app:layout_constraintEnd_toStartOf="@+id/tv_third_digits"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_first_digits"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_card_number"
                tools:text="4562" />

            <TextView
                android:id="@+id/tv_third_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                app:layout_constraintBottom_toBottomOf="@+id/tv_second_digits"
                app:layout_constraintEnd_toStartOf="@+id/tv_fourth_digits"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_second_digits"
                app:layout_constraintTop_toTopOf="@+id/tv_second_digits"
                tools:text="4562" />

            <TextView
                android:id="@+id/tv_fourth_digits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                app:layout_constraintBottom_toBottomOf="@+id/tv_third_digits"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_third_digits"
                app:layout_constraintTop_toTopOf="@+id/tv_third_digits"
                tools:text="4562" />

            <TextView
                android:id="@+id/tv_title_card_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_card_holder"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_first_digits"/>

            <TextView
                android:id="@+id/tv_data_card_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_card_holder"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Henry Rueda Baylon" />

            <TextView
                android:id="@+id/tv_title_exp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_exp_date"
                android:textColor="@color/white"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_data_card_holder"/>

            <TextView
                android:id="@+id/tv_data_exp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/margin_text"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_title_exp_date"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="03/26" />

            <TextView
                android:id="@+id/btn_generate_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_generate_cvv"
                android:textColor="@color/white"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_data_card_holder"/>

            <TextView
                android:id="@+id/tv_data_cvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/margin_text"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/btn_generate_cvv"
                app:layout_constraintStart_toStartOf="@+id/btn_generate_cvv"
                app:layout_constraintTop_toBottomOf="@id/btn_generate_cvv"
                tools:text="123" />

            <TextView
                android:id="@+id/countdown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Generar otro CVV en: 00:00:00"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_data_cvv"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movements"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        tools:listitem="@layout/item_movements"
        tools:itemCount="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_info_card"/>


</androidx.constraintlayout.widget.ConstraintLayout>